# aqua-whisper

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: auth.py  celery_app.py  config.py  logging_config.py  main.py  pipeline.py  schemas.py  tasks.py  tracing.py  youtube.py
docs/plans/: 2025-02-19-aqua-whisper-design.md  2025-02-19-aqua-whisper.md
scripts/: download_whisper_model.py
tests/: test_auth.py  test_health.py  test_logging_config.py  test_pipeline.py  test_tasks.py  test_transcript_api.py  test_youtube_url.py
